Fixed ssl session issue

--- a/conf.d/talk.hackspace.ca.conf
+++ b/conf.d/talk.hackspace.ca.conf
@@ -20,7 +20,7 @@ server {
   ssl_certificate certs/talk.hackspace.ca.crt;
   ssl_certificate_key certs/talk.hackspace.ca.key;
 
-  ssl_session_tickets off;
+  #ssl_session_tickets off;
 
   # enable SPDY header compression
   spdy_headers_comp 6;
