Rules for dokuwiki

--- a/conf.d/vancouver.hackspace.ca.conf
+++ b/conf.d/vancouver.hackspace.ca.conf
@@ -71,4 +71,8 @@ server {
 	location ~ /\.ht {
 		deny all;
 	}
+        # dokuwiki permissions
+        location ~ /(data|conf|bin|inc)/ {
+                deny all;
+        }
 }
