Added redirect for / -> /wp/

--- a/conf.d/vancouver.hackspace.ca.conf
+++ b/conf.d/vancouver.hackspace.ca.conf
@@ -43,7 +43,9 @@ server {
 		# Uncomment to enable naxsi on this location
 		# include /etc/nginx/naxsi.rules
 	}
-
+        location = / {
+                rewrite ^ /wp/ redirect;
+        }
 	error_page 500 502 503 504 /50x.html;
 	location = /50x.html {
 		root /usr/share/nginx/www;
