Added proxy for door api

--- a/conf.d/vancouver.hackspace.ca.conf
+++ b/conf.d/vancouver.hackspace.ca.conf
@@ -46,6 +46,11 @@ server {
         location = / {
                 rewrite ^ /wp/ redirect;
         }
+
+        location /door.json {
+                proxy_pass http://api.hackspace.ca/s/vhs/data/door.json;
+        }
+
 	error_page 500 502 503 504 /50x.html;
 	location = /50x.html {
 		root /usr/share/nginx/www;
