Fixed max body size

--- a/conf.d/talk.hackspace.ca.conf
+++ b/conf.d/talk.hackspace.ca.conf
@@ -28,6 +28,7 @@ server {
   # remember the certificate for a year and automatically connect to HTTPS
   add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains';
 
+  client_max_body_size 10m;
   gzip on;
   gzip_min_length 1000;
   gzip_comp_level 5;
