--- a/conf.d/vancouver.hackspace.ca.conf
+++ b/conf.d/vancouver.hackspace.ca.conf
@@ -47,7 +47,7 @@ server {
                 rewrite ^ /wp/ redirect;
         }
 
-        location /door.json {
+        location /api/door.json {
                 proxy_pass http://api.hackspace.ca/s/vhs/data/door.json;
         }
 
