env vars will not refresh in docker, using host entires instead

--- a/conf.d/vancouver.hackspace.ca.conf
+++ b/conf.d/vancouver.hackspace.ca.conf
@@ -66,7 +66,7 @@ server {
 		# With php5-cgi alone:
 		# fastcgi_pass 127.0.0.1:9000;
 		# With php5-fpm:
-		fastcgi_pass {{VHS_WEBSITE_PORT_9000_TCP_ADDR}}:{{VHS_WEBSITE_PORT_9000_TCP_PORT}};
+		fastcgi_pass vhs-website:9000;
 		fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $request_filename;
 		include fastcgi_params;
