Used the same style scripts as vhs-website for building/creating

--- a/conf/conf.d/talk.hackspace.ca.conf
+++ b/conf/conf.d/talk.hackspace.ca.conf
@@ -41,7 +41,7 @@ server {
 
   # maximum file upload size (keep up to date when changing the corresponding site setting)
   location / {
-    proxy_pass  http://{{APP_PORT_80_TCP_ADDR}}:{{APP_PORT_80_TCP_PORT}};
+    proxy_pass  http://app;
     proxy_set_header        Host            $host;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
