Link api container, move upstream to a var to stop from complaining on test

--- a/conf/conf.d/vancouver.hackspace.ca.conf
+++ b/conf/conf.d/vancouver.hackspace.ca.conf
@@ -52,7 +52,7 @@ server {
 	location = /50x.html {
 		root /usr/share/nginx/www;
 	}
-
+        set $upstream 'vhs-website:9000';
 	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 	#
 	location ~ \.php$ {
@@ -63,7 +63,7 @@ server {
 		# With php5-cgi alone:
 		# fastcgi_pass 127.0.0.1:9000;
 		# With php5-fpm:
-		fastcgi_pass vhs-website:9000;
+		fastcgi_pass $upstream;
 		fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $request_filename;
 		include fastcgi_params;
