--- a/conf/conf.d/api.hackspace.ca.conf
+++ b/conf/conf.d/api.hackspace.ca.conf
@@ -11,9 +11,8 @@ server {
   ssl_certificate certs/hackspace.ca.crt;
   ssl_certificate_key certs/hackspace.ca.key;
 
-  set $upstream 'http://vhs-api:8080'; 
   location / {
-    proxy_pass  $upstream;
+    proxy_pass  http://vhs-api:8080;
     proxy_set_header        Host            $host;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
