--- a/conf/conf.d/api.hackspace.ca.conf
+++ b/conf/conf.d/api.hackspace.ca.conf
@@ -1,5 +1,14 @@
 
 server {
+    listen 80;
+    server_name www.isvhsopen.com isvhsopen.com;
+    location / {
+        proxy_pass http://vhs-api:8080/s/vhs/data/door/fullpage;
+        break;
+    }
+}
+
+server {
   listen 80;
   listen 443 ssl http2;
   server_name api.hackspace.ca;
@@ -13,9 +22,5 @@ server {
 
   location / {
     proxy_pass  http://vhs-api:8080;
-    proxy_set_header        Host            $host;
-    proxy_set_header        X-Real-IP       $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Proto $scheme;
   }
 }
