Proxy assets for isvhsopen

--- a/conf/conf.d/api.hackspace.ca.conf
+++ b/conf/conf.d/api.hackspace.ca.conf
@@ -4,8 +4,13 @@ server {
     server_name www.isvhsopen.com isvhsopen.com;
     location / {
         proxy_pass http://vhs-api:8080/s/vhs/data/door/fullpage;
-        break;
     }
+    location /css/ {
+        proxy_pass http://vhs-api:8080/css/;
+    }
+    location /javascripts/ {
+        proxy_pass http://vhs-api:8080/javascripts/;
+    }    
 }
 
 server {
