Removed discourse upstream from talk.hackspace.ca.conf

--- a/conf/conf.d/talk.hackspace.ca.conf
+++ b/conf/conf.d/talk.hackspace.ca.conf
@@ -1,6 +1,6 @@
 # Additional MIME types that you'd like nginx to handle go in here
 
-upstream discourse { server 127.0.0.1:3000; }
+###upstream discourse { server 127.0.0.1:3000; }
 
 server {
   listen 80;
