--- a/conf/conf.d/talk.hackspace.ca.conf
+++ b/conf/conf.d/talk.hackspace.ca.conf
@@ -5,7 +5,7 @@
 server {
   listen 80;
   server_name talk.hackspace.ca;
-  rewrite ^ https://talk.hackspace.ca$request_uri? permanent;
+  rewrite ^ https://talk.vanhack.ca$request_uri? permanent;
 }
 
 server {
@@ -35,12 +35,5 @@ server {
   sendfile on;
   keepalive_timeout 65;
 
-  # maximum file upload size (keep up to date when changing the corresponding site setting)
-  location / {
-    proxy_pass  http://app;
-    proxy_set_header        Host            $host;
-    proxy_set_header        X-Real-IP       $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Proto $scheme;
-  }
+  rewrite ^ https://talk.vanhack.ca$request_uri? permanent;
 }
