--- a/conf/conf.d/vanhack.ca.conf
+++ b/conf/conf.d/vanhack.ca.conf
@@ -25,9 +25,9 @@ server {
 	# courtesy of https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
 	ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK;
 	ssl_prefer_server_ciphers on;
-        ssl_certificate       certs/hackspace.ca.crt;
-        ssl_certificate_key   certs/hackspace.ca.key;
-	server_name vancouver.hackspace.ca;
+        ssl_certificate       certs/vanhack.crt;
+        ssl_certificate_key   certs/vanhack.key;
+	server_name vanhack.ca;
 	#listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
 	root /var/nginx/vhs-website;
@@ -45,7 +45,7 @@ server {
         }
 
         location /api/door.json {
-                proxy_pass http://api.hackspace.ca/s/vhs/data/door.json;
+                proxy_pass http://api.vanhack.ca/s/vhs/data/door.json;
         }
 
 	error_page 500 502 503 504 /50x.html;
