Adding isvhsopen.com back

--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -1,11 +1,11 @@
-### server {
-###   listen 80;
-###   server_name isvhsopen.vanhack.ca www.isvhsopen.com;
-###
-###   location / {
-###    proxy_pass  http://isvhsopen:3000;
-###   }
-### }
+server {
+  listen 80;
+  server_name ivhsopen.com www.isvhsopen.com;
+
+  location / {
+   proxy_pass  http://isvhsopen:3000;
+  }
+}
 
 server {
   listen 80;
