--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name ivhsopen.com www.isvhsopen.com;
+  server_name www.isvhsopen.com isvhsopen.com;
 
   location / {
    proxy_pass  http://isvhsopen:3000;
