Allow CORS for api.vanhack.ca

--- a/conf/conf.d/api.vanhack.ca.conf
+++ b/conf/conf.d/api.vanhack.ca.conf
@@ -26,6 +26,7 @@ server {
   ssl_certificate_key certs/vanhack.key;
 
   location / {
+    add_header 'Access-Control-Allow-Origin' '*';
     proxy_pass  http://vhs-api:8080;
   }
 }
