Fixed vhs-portal container name reference

--- a/conf/conf.d/portal.vanhack.ca.conf
+++ b/conf/conf.d/portal.vanhack.ca.conf
@@ -18,6 +18,6 @@ server {
   ssl_certificate_key certs/vanhack.key;
 
   location / {
-    proxy_pass  http://portal:3007;
+    proxy_pass  http://vhs-portal:3007;
   }
 }
