--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  list 443 ssl http2;
+  listen 443 ssl http2;
   server_name isvhsopen.com www.isvhsopen.com;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   # courtesy of https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
