--- a/conf/conf.d/api.vanhack.ca.conf
+++ b/conf/conf.d/api.vanhack.ca.conf
@@ -15,6 +15,11 @@ server {
 
 server {
   listen 80;
+  server_name api.vanhack.ca;
+  rewrite ^ https://api.vanhack.ca$request_uri? permanent;
+}
+
+server {
   listen 443 ssl http2;
   server_name api.vanhack.ca;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
