letsencrypt configuration fixes

--- a/conf/conf.d/api.vanhack.ca.conf
+++ b/conf/conf.d/api.vanhack.ca.conf
@@ -11,12 +11,22 @@ server {
     location /javascripts/ {
         proxy_pass http://vhs-api:8080/javascripts/;
     }    
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
 
 server {
   listen 80;
   server_name api.vanhack.ca;
   rewrite ^ https://api.vanhack.ca$request_uri? permanent;
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
 
 server {
@@ -32,5 +42,10 @@ server {
 
   location / {
     proxy_pass  http://vhs-api:8080;
+  }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
   }
 }
