--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -13,6 +13,11 @@ server {
   location / {
    proxy_pass  http://isvhsopen:3000;
   }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
 
 server {
@@ -29,5 +34,10 @@ server {
 
   location / {
     proxy_pass  http://isvhsopen:3000;
+  }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
   }
 }
