--- a/conf/conf.d/portal.vanhack.ca.conf
+++ b/conf/conf.d/portal.vanhack.ca.conf
@@ -4,6 +4,11 @@ server {
   listen 80;
   server_name portal.vanhack.ca;
   rewrite ^ https://portal.vanhack.ca$request_uri? permanent;
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
 
 server {
@@ -19,5 +24,10 @@ server {
 
   location / {
     proxy_pass  http://vhs-portal:3007;
+  }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
   }
 }
