--- a/conf/conf.d/stats.vanhack.ca.conf
+++ b/conf/conf.d/stats.vanhack.ca.conf
@@ -13,4 +13,9 @@ server {
   location / {
     proxy_pass  http://grafana:3000/;
   }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
