--- a/conf/conf.d/talk.vanhack.ca.conf
+++ b/conf/conf.d/talk.vanhack.ca.conf
@@ -6,6 +6,11 @@ server {
   listen 80;
   server_name talk.vanhack.ca;
   rewrite ^ https://talk.vanhack.ca$request_uri? permanent;
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
 
 server {
@@ -42,5 +47,10 @@ server {
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Proto $scheme;
+  }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
   }
 }
