--- a/conf/conf.d/vanhack.ca.conf
+++ b/conf/conf.d/vanhack.ca.conf
@@ -79,4 +79,9 @@ server {
         location ~ /(data|conf|bin|inc)/ {
                 deny all;
         }
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
 }
