--- a/conf/conf.d/wiki.vanhack.ca.conf
+++ b/conf/conf.d/wiki.vanhack.ca.conf
@@ -13,4 +13,9 @@ server {
                 rewrite ^ https://vanhack.ca/doku.php redirect;
         }
 
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
+
 }
