--- a/conf/conf.d/atoms.vanhack.ca.conf
+++ b/conf/conf.d/atoms.vanhack.ca.conf
@@ -1,7 +1,19 @@
+# Additional MIME types that you'd like nginx to handle go in here
+
 server {
   listen 80;
+  server_name atoms.vanhack.ca;
+  rewrite ^ https://atoms.vanhack.ca$request_uri? permanent;
+
+  location ^~ /.well-known/ {
+    alias /var/www/letsencrypt/;
+    allow all;
+  }
+}
+
+server {
   listen 443 ssl http2;
-  server_name influxdb.vanhack.ca;
+  server_name atoms.vanhack.ca;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   # courtesy of https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
   ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK;
@@ -11,7 +23,7 @@ server {
   ssl_certificate_key certs/vanhack.key;
 
   location / {
-    proxy_pass  http://influxdb:8083/;
+    proxy_pass  http://atoms:3004;
   }
 
   location ^~ /.well-known/ {
