letsencrypt path fixes

--- a/conf/conf.d/api.vanhack.ca.conf
+++ b/conf/conf.d/api.vanhack.ca.conf
@@ -13,7 +13,7 @@ server {
     }    
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
@@ -24,7 +24,7 @@ server {
   rewrite ^ https://api.vanhack.ca$request_uri? permanent;
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
@@ -45,7 +45,7 @@ server {
   }
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
