--- a/conf/conf.d/vanhack.ca.conf
+++ b/conf/conf.d/vanhack.ca.conf
@@ -81,7 +81,7 @@ server {
         }
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
