--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -15,7 +15,7 @@ server {
   }
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
@@ -37,7 +37,7 @@ server {
   }
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
