--- a/conf/conf.d/portal.vanhack.ca.conf
+++ b/conf/conf.d/portal.vanhack.ca.conf
@@ -6,7 +6,7 @@ server {
   rewrite ^ https://portal.vanhack.ca$request_uri? permanent;
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
@@ -27,7 +27,7 @@ server {
   }
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
