--- a/conf/conf.d/talk.vanhack.ca.conf
+++ b/conf/conf.d/talk.vanhack.ca.conf
@@ -8,7 +8,7 @@ server {
   rewrite ^ https://talk.vanhack.ca$request_uri? permanent;
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
@@ -50,7 +50,7 @@ server {
   }
 
   location ^~ /.well-known/ {
-    alias /var/www/letsencrypt/;
+    alias /var/nginx/letsencrypt/;
     allow all;
   }
 }
