Improved letsencrypt configuration

--- a/conf/conf.d/api.vanhack.ca.conf
+++ b/conf/conf.d/api.vanhack.ca.conf
@@ -12,10 +12,7 @@ server {
         proxy_pass http://vhs-api:8080/javascripts/;
     }    
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
 
 server {
@@ -23,10 +20,7 @@ server {
   server_name api.vanhack.ca;
   rewrite ^ https://api.vanhack.ca$request_uri? permanent;
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
 
 server {
@@ -44,8 +38,5 @@ server {
     proxy_pass  http://vhs-api:8080;
   }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
