--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -14,10 +14,7 @@ server {
    proxy_pass  http://isvhsopen:3000;
   }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
 
 server {
@@ -36,8 +33,5 @@ server {
     proxy_pass  http://isvhsopen:3000;
   }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
