--- a/conf/conf.d/portal.vanhack.ca.conf
+++ b/conf/conf.d/portal.vanhack.ca.conf
@@ -5,10 +5,7 @@ server {
   server_name portal.vanhack.ca;
   rewrite ^ https://portal.vanhack.ca$request_uri? permanent;
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
 
 server {
@@ -26,8 +23,5 @@ server {
     proxy_pass  http://vhs-portal:3007;
   }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
