--- a/conf/conf.d/slack.vanhack.ca.conf
+++ b/conf/conf.d/slack.vanhack.ca.conf
@@ -13,9 +13,5 @@ server {
                 rewrite ^ https://vanhack.slack.com/ redirect;
         }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
-
+  include ../snippets/letsencrypt.conf;
 }
