--- a/conf/conf.d/talk.vanhack.ca.conf
+++ b/conf/conf.d/talk.vanhack.ca.conf
@@ -7,10 +7,7 @@ server {
   server_name talk.vanhack.ca;
   rewrite ^ https://talk.vanhack.ca$request_uri? permanent;
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
 
 server {
@@ -49,8 +46,5 @@ server {
     proxy_set_header        X-Forwarded-Proto $scheme;
   }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
