--- a/conf/conf.d/vanhack.ca.conf
+++ b/conf/conf.d/vanhack.ca.conf
@@ -80,8 +80,5 @@ server {
                 deny all;
         }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
