--- a/conf/conf.d/stats.vanhack.ca.conf
+++ b/conf/conf.d/stats.vanhack.ca.conf
@@ -14,8 +14,5 @@ server {
     proxy_pass  http://grafana:3000/;
   }
 
-  location ^~ /.well-known/ {
-    alias /var/nginx/letsencrypt/;
-    allow all;
-  }
+  include ../snippets/letsencrypt.conf;
 }
