letsencrypt configuration path fixes

--- a/conf/conf.d/api.vanhack.ca.conf
+++ b/conf/conf.d/api.vanhack.ca.conf
@@ -12,7 +12,7 @@ server {
         proxy_pass http://vhs-api:8080/javascripts/;
     }    
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
 
 server {
@@ -20,7 +20,7 @@ server {
   server_name api.vanhack.ca;
   rewrite ^ https://api.vanhack.ca$request_uri? permanent;
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
 
 server {
@@ -38,5 +38,5 @@ server {
     proxy_pass  http://vhs-api:8080;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
