--- a/conf/conf.d/influxdb.vanhack.ca.conf
+++ b/conf/conf.d/influxdb.vanhack.ca.conf
@@ -14,5 +14,5 @@ server {
     proxy_pass  http://influxdb:8083/;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
