--- a/conf/conf.d/isvhsopen.vanhack.ca.conf
+++ b/conf/conf.d/isvhsopen.vanhack.ca.conf
@@ -14,7 +14,7 @@ server {
    proxy_pass  http://isvhsopen:3000;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
 
 server {
@@ -33,5 +33,5 @@ server {
     proxy_pass  http://isvhsopen:3000;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
