--- a/conf/conf.d/portal.vanhack.ca.conf
+++ b/conf/conf.d/portal.vanhack.ca.conf
@@ -5,7 +5,7 @@ server {
   server_name portal.vanhack.ca;
   rewrite ^ https://portal.vanhack.ca$request_uri? permanent;
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
 
 server {
@@ -23,5 +23,5 @@ server {
     proxy_pass  http://vhs-portal:3007;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
