--- a/conf/conf.d/slack.vanhack.ca.conf
+++ b/conf/conf.d/slack.vanhack.ca.conf
@@ -13,5 +13,5 @@ server {
                 rewrite ^ https://vanhack.slack.com/ redirect;
         }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
