--- a/conf/conf.d/stats.vanhack.ca.conf
+++ b/conf/conf.d/stats.vanhack.ca.conf
@@ -14,5 +14,5 @@ server {
     proxy_pass  http://grafana:3000/;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
