--- a/conf/conf.d/wiki.vanhack.ca.conf
+++ b/conf/conf.d/wiki.vanhack.ca.conf
@@ -13,5 +13,5 @@ server {
                 rewrite ^ https://vanhack.ca/doku.php redirect;
         }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
