--- a/conf/conf.d/talk.vanhack.ca.conf
+++ b/conf/conf.d/talk.vanhack.ca.conf
@@ -7,7 +7,7 @@ server {
   server_name talk.vanhack.ca;
   rewrite ^ https://talk.vanhack.ca$request_uri? permanent;
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
 
 server {
@@ -46,5 +46,5 @@ server {
     proxy_set_header        X-Forwarded-Proto $scheme;
   }
 
-  include ../snippets/letsencrypt.conf;
+  include snippets/letsencrypt.conf;
 }
