--- a/conf/conf.d/vanhack.ca.conf
+++ b/conf/conf.d/vanhack.ca.conf
@@ -1,6 +1,6 @@
 # You may add here your
 # server {
-#	...
+#  ...
 # }
 # statements for each of your virtual hosts to this file
 
@@ -18,67 +18,68 @@
 ##
 
 server {
-	listen   80 default_server; ## listen for ipv4; this line is default and implied
-        listen   443 ssl default_server;
+  listen   80 default_server; ## listen for ipv4; this line is default and implied
+  listen   443 ssl default_server;
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	# courtesy of https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
-	ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK;
-	ssl_prefer_server_ciphers on;
-        ssl_certificate       certs/vanhack.crt;
-        ssl_certificate_key   certs/vanhack.key;
-	server_name vanhack.ca;
-	#listen   [::]:80 default ipv6only=on; ## listen for ipv6
+  server_name vanhack.ca;
 
-	root /var/nginx/vhs-website;
-	index index.php index.html index.htm;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  # courtesy of https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
+  ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK;
+  ssl_prefer_server_ciphers on;
 
-	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to index.html
-		try_files $uri $uri/ /wp/index.php?q=$uri&$args;
-		# Uncomment to enable naxsi on this location
-		# include /etc/nginx/naxsi.rules
-	}
-        location = / {
-                rewrite ^ /wp/ redirect;
-        }
+  ssl_certificate /etc/letsencrypt/live/vanhack.ca-0001/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/vanhack.ca-0001/privkey.pem;
 
-        location /api/door.json {
-                proxy_pass http://api.vanhack.ca/s/vhs/data/door.json;
-        }
+  root /var/nginx/vhs-website;
+  index index.php index.html index.htm;
 
-	error_page 500 502 503 504 /50x.html;
-	location = /50x.html {
-		root /usr/share/nginx/www;
-	}
+  location / {
+    # First attempt to serve request as file, then
+    # as directory, then fall back to index.html
+    try_files $uri $uri/ /wp/index.php?q=$uri&$args;
+    # Uncomment to enable naxsi on this location
+    # include /etc/nginx/naxsi.rules
+  }
+  location = / {
+    rewrite ^ /wp/ redirect;
+  }
 
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	#
-	location ~ \.php$ {
-                try_files $uri =404;
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		# NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+  location /api/door.json {
+    proxy_pass http://api.vanhack.ca/s/vhs/data/door.json;
+  }
 
-		# With php5-cgi alone:
-		# fastcgi_pass 127.0.0.1:9000;
-		# With php5-fpm:
-		fastcgi_pass vhs-website:9000;
-		fastcgi_index index.php;
-                fastcgi_param SCRIPT_FILENAME $request_filename;
-		include fastcgi_params;
-	}
+  error_page 500 502 503 504 /50x.html;
+  location = /50x.html {
+    root /usr/share/nginx/www;
+  }
 
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	#
-	location ~ /\.ht {
-		deny all;
-	}
-        # dokuwiki permissions
-        location ~ /(data|conf|bin|inc)/ {
-                deny all;
-        }
+  # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+  #
+  location ~ \.php$ {
+    try_files $uri =404;
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+
+    # With php5-cgi alone:
+    # fastcgi_pass 127.0.0.1:9000;
+    # With php5-fpm:
+    fastcgi_pass vhs-website:9000;
+    fastcgi_index index.php;
+    fastcgi_param SCRIPT_FILENAME $request_filename;
+    include fastcgi_params;
+  }
+
+  # deny access to .htaccess files, if Apache's document root
+  # concurs with nginx's one
+  #
+  location ~ /\.ht {
+    deny all;
+  }
+  # dokuwiki permissions
+  location ~ /(data|conf|bin|inc)/ {
+    deny all;
+  }
 
   include snippets/letsencrypt.conf;
 }
