Removed default_server from vanhack.ca config

--- a/conf/conf.d/vanhack.ca.conf
+++ b/conf/conf.d/vanhack.ca.conf
@@ -1,6 +1,6 @@
 server {
-  listen   80 default_server; ## listen for ipv4; this line is default and implied
-  listen   443 ssl default_server;
+  listen   80; ## listen for ipv4; this line is default and implied
+  listen   443 ssl;
 
   server_name vanhack.ca;
 
