Removed useless / from isthelaserbusy.com configurations

--- a/conf/conf.d/isthelaserbusy.com.conf
+++ b/conf/conf.d/isthelaserbusy.com.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   server_name isthelaserbusy.com;
-  rewrite ^ https://isthelaserbusy.com/$request_uri? permanent;
+  rewrite ^ https://isthelaserbusy.com$request_uri? permanent;
 
   include snippets/letsencrypt.conf;
 }
