--- a/conf/conf.d/www.isthelaserbusy.com.conf
+++ b/conf/conf.d/www.isthelaserbusy.com.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   server_name www.isthelaserbusy.com;
-  rewrite ^ https://isthelaserbusy.com/$request_uri? permanent;
+  rewrite ^ https://isthelaserbusy.com$request_uri? permanent;
 
   include snippets/letsencrypt.conf;
 }
@@ -17,7 +17,7 @@ server {
   ssl_certificate /etc/letsencrypt/live/www.isthelaserbusy.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/www.isthelaserbusy.com/privkey.pem;
 
-  rewrite ^ https://isthelaserbusy.com/$request_uri? permanent;
+  rewrite ^ https://isthelaserbusy.com$request_uri? permanent;
 
   include snippets/letsencrypt.conf;
 }
