Full rewriting from vancouver.vanhack.ca

--- a/conf/conf.d/vancouver.vanhack.ca.conf
+++ b/conf/conf.d/vancouver.vanhack.ca.conf
@@ -11,9 +11,7 @@ server {
   ssl_certificate /etc/letsencrypt/live/vancouver.vanhack.ca/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/vancouver.vanhack.ca/privkey.pem;
 
-  location = / {
-    rewrite ^ https://vanhack.ca/wp/ redirect;
-  }
-
   include snippets/letsencrypt.conf;
+
+  rewrite ^/(.*)$ https://vanhack.ca/$1 redirect;
 }
