--- a/conf/conf.d/talk.vanhack.space.conf
+++ b/conf/conf.d/talk.vanhack.space.conf
@@ -37,7 +37,7 @@ server {
 
   # maximum file upload size (keep up to date when changing the corresponding site setting)
   location / {
-    proxy_pass  http://app;
+    proxy_pass  http://talk;
     proxy_set_header        Host            $host;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
